--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -27,6 +27,7 @@ bld/
 [Ll]og/
 
 # Visual Studio 2015 cache/options directory
+*.Views
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
